--- a/pieta.html
+++ b/pieta.html
@@ -15,5 +15,5 @@
     <div id="child0"><div class="text">jquery and so on</div></div>
     <div id="child1"><div class="text">for #web irc</div></div>
 </div>
-<img src="image.php" />
+<img src="image.php" alt="Smiley face" height="42" width="42" />
 </html>
