--- a/pieta.html
+++ b/pieta.html
@@ -16,7 +16,7 @@
     <div id="child1"><div class="text">for #web irc</div></div>
 </div>
 <div>
-<img src="image.php" alt="Smiley face" height="100" width="100"/>
+<img src="Ceiling-Cat-Picture.jpg" alt="Smiley face" height="100" width="100"/>
 <img src="image1.jpg" alt="Smiley face" height="100" width="100"/>
 
 </div>
